# patent-easy

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/prompts/: chat_patent.txt  extract_keywords.txt  rerank_results.txt  summarize_patent.txt
app/routers/: chat.py  patents.py  search.py  summary.py
app/schemas/: __init__.py  chat.py  error.py  patent.py  search.py  summary.py
app/services/: cache.py  chat_service.py  kipris_client.py  llm_client.py  mock_llm_client.py  mock_patent_service.py  query_builder.py  search_service.py  (+1 more)
data/: eval_queries.json  keyword_prompt_cases.json  mock_patents.json
docs/: api_reference.md  backend_evaluation_report.md  backend_test_plan.md  deployment_guide.md  frontend_ai_integration.md  frontend_backend_integration_guide.md  frontend_mock_api_guide.md  keyword_prompt_design.md  kipris_api_research.md  release_notes.md
scripts/: benchmark.py  manual_e2e_test.py  run_quality_gate.py  smoke_test_deployed_api.py  verify_kipris_api.py
tests/: test_benchmark.py  test_cache.py  test_chat_api.py  test_chat_live.py  test_chat_service.py  test_config.py  test_deployment_smoke.py  test_error_response.py  test_kipris_client.py  test_llm_client.py  test_llm_client_live.py  test_mock_api.py  test_observability.py  test_openapi_contract.py  test_patents_api.py  test_query_builder.py  test_query_builder_live.py  test_search_api.py  test_search_live.py  test_search_service.py  test_summary_api.py  test_summary_live.py  test_summary_service.py
(+8 files in other folders)
