[project]
name = "patent-easy-backend"
version = "0.1.0"
description = "FastAPI backend for PatentEasy, an AI-assisted Korean patent search service."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live_kipris: tests that call the real KIPRIS Plus API and require KIPRIS_API_KEY",
    "live_llm: tests that call a real LLM provider API and require provider API keys",
]
